# ass

./: .gitignore  README.md  TODO.md  VIEWER.md  pyproject.toml
.github/workflows/: python-tests.yml
ass/: __init__.py  geometry.py  physics.py  texture.py
ass/editor/: __init__.py  base.py  common.py  id_software.py  infinity_ward.py
ass/editor/valve/: __init__.py  map220.py  vmf.py
ass/scene/: __init__.py  base.py  blockbench.py  khronos.py  pixar.py  recast.py  valve.py  wavefront.py
ass/scene/valve/: __init__.py  mdl.py  phy.py  vtx.py  vvd.py
tests/editor/: test_entity.py
tests/editor/common/: test_double.py
tests/geometry/: test_indices.py  test_vertex.py
tests/physics/: test_aabb.py  test_brush.py  test_plane.py
tests/scene/khronos/: test_gltf.py
tests/scene/pixar/: test_usd.py
tests/scene/wavefront/: test_obj.py
tests/vector/: test_vec3.py
